Updated link effect (de)serialization.